@@ -1,3 +1,11 @@
+2008-08-16  Paul N. Hilfinger  <hilfingr@adacore.com>
+
+	* xcoffread.c (scan_xcoff_symtab): Do not include global symbols
+	('F' format) for @FIX names generated by the loader, retaining only
+	the minimal symbols (and no partial symbol tables) for these names.
+	Fixes warning messages about symbols that are found in partial 
+	symbol tables, but not full symbol tables.
+
 2008-08-16  Pedro Alves  <pedro@codesourcery.com>
 
 	* infrun.c (fetch_inferior_event): Only call normal_stop if not
